--- a/web-app/package.json
+++ b/web-app/package.json
@@ -14,5 +14,8 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"js-guid": "^1.0.2"
+	}
 }
